# THUNDER

./: .compile.sh.swp  .gitignore  .nfs00000000098805d500000cc6  compile-base.sh  compile-icc.sh  compile.sh  readme.txt
3rd-lib-icc/gsl2.4-icc/lib/: libgsl.la  libgslcblas.la  libgslcblas.so.0.0.0
3rd-lib-icc/gsl2.4-icc/lib/pkgconfig/: gsl.pc
Particles/mrc-files/: .browsercache.json
THUEM/: CMakeLists.txt
THUEM-BASE/: CMakeLists.txt
THUEM-BASE/Release/app/: thunder  thunder_average  thunder_genmask  thunder_mask  thunder_postprocess  thunder_resize
THUEM-BASE/Release/unittest/: CTFTest  DirectionalStat  ExpectationTest  FFTTest  FunctionsTest  ImageFunctionsTest  InterpolationTest  MaskTest  ParallelTest  ParticleTest  PostprocessTest  ProjCTFTest  ProjRecoTest  ProjectorTest  RandomTest  SymmetryTest  TabFunctionTest  TransformationTest
THUEM-BASE/appsrc/: thunder.cpp
THUEM-BASE/src/: tags
THUEM-BASE/src/Image/: ImageFile.cpp
THUEM/Release/: CMakeCache.txt  Makefile  cmake_install.cmake
THUEM/Release/app/: thunder_lowpass
THUEM/Release/unittest/: DatabaseTest  EulerTest  FSCGenerator  ImageFileTest  ImageTest  MLOptimiserTest  ReconstructorTest  SpectrumTest
THUEM/appsrc/: thunder.cpp
THUEM/src/: FFT.cpp  Reconstructor.cpp
instance/: Meta_Round_000.thu  Sig_A_Round_000.txt  Sig_B_Round_000.txt  map-run-full.sh  map-run-half.sh  map-run-icc-full.sh  map-run-icc-half.sh  para.json  para_lxm_full.json  para_lxm_half.json  para_lxm_tiny.json  run-full.sh  run-half.sh  run-icc-full.sh  run-icc-half.sh  run-tiny.sh  thunder
instance-tiny/: gmon.out  map_run.sh  para.json  run.sh  runTHUNDER.sh
instance-tiny/Particles/mrc-files/: 64gen.sh  gen.sh  ok_gen.sh
instance-tiny/input/: particles_select02_small.thu
instance-tiny/output/: FSC_000_Final.txt  FSC_000_Round_001.txt  Meta_Round_000.thu  Meta_Round_001.thu  Sig_A_Round_001.txt  Sig_B_Round_000.txt  Sig_B_Round_001.txt
instance/Particles/mrc-files/: .eman2log.txt  .eman2settings.dir  stack_0001_DW_particles.star  stack_0002_DW_particles.star  stack_0003_DW_particles.star  stack_0004_DW_particles.star  stack_0005_DW_particles.star  stack_0006_DW_particles.star  stack_0007_DW_particles.star  stack_0008_DW_particles.star  stack_0009_DW_particles.star  stack_0010_DW_particles.star
instance/input/: particles_1-10_select02.thu  particles_1-10_select02_half.thu  particles_1-10_select02_tiny.thu  particles_select02_small.thu
instance/output/: FSC_000_Final.txt  FSC_000_Round_000.txt  Meta_Round_000.thu  Sig_A_Round_000.txt  Sig_B_Round_000.txt
mpich/include/: mpi.mod  mpi_base.mod  mpi_constants.mod  mpi_sizeofs.mod  mpicxx.h
mpich/lib/: libmpi.la  libmpi.so.12  libmpi.so.12.1.0  libmpicxx.la  libmpicxx.so.12  libmpicxx.so.12.1.0  libmpifort.la  libmpifort.so.12.1.0
mpich/lib/pkgconfig/: mpich.pc  openpa.pc
script/: STAR_2_THU.py  runTHUNDER.sh  setEnvVariable.sh
tools/: thunder_clean.sh  thunder_plotFSC.sh  thunder_postprocess.sh
